javascript/styles/vanilla.css
.hidden {
  display: none
}

.dark {
  dialog.modal-container::backdrop {
    background-color: rgba(17, 24, 39, 0.8);
  }

  .modal-header,
  .modal-footer {
    border-color: #4B5563;
  }

  .modal-content {
    background-color: #1F2937;
    color: #ffffff;
  }

  .modal-close-button:hover,
  .modal-close-icon:hover {
    background-color: #6B7280;
    color: #ffffff;
  }
}

:not(.dark) {

  .modal-close-button,
  .modal-close-icon {
    color: #9CA3AF;

    &:hover {
      color: #111827;
      background-color: #E5E7EB;
    }
  }
}

dialog.modal-container::backdrop {
  background-color: rgba(17, 24, 39, 0.7);
}

.modal-container {
  position: relative;

  &[data-header="false"] .modal-header {
    position: absolute;
  }

  &[data-header-divider="true"] .modal-header {
    border-bottom-width: 1px;
  }

  &[data-footer-divider="true"] .modal-footer {
    border-top-width: 1px;
  }

  &[data-padding="true"] .modal-main {
    padding: 1rem;
    padding-top: 0.5rem;
  }

  &[data-title="false"] .modal-title-h {
    display: none;
  }

  &[data-close-button="false"] .modal-close {
    display: none;
  }

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border-width: 0;
  }
}

.modal-inner {
  display: flex;
  padding: 0.25rem;
  justify-content: center;
  align-items: center;
  min-height: 100%;

  @media (min-width: 640px) {
    padding: 1rem;
  }
}

.modal-content {
  overflow: hidden;
  position: relative;
  background-color: #ffffff;
  transition-property: all;
  text-align: left;
  border-radius: 0.5rem;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);

  @media (min-width: 640px) {
    margin-top: 2rem;
    margin-bottom: 2rem;
    max-width: 48rem;
  }
}

.modal-header {
  display: flex;
  padding-top: 1rem;
  padding-bottom: 1rem;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.modal-title {
  line-height: 1.75rem;
  font-weight: 600;
  padding-left: 1rem;
}

.modal-footer {
  display: flex;
  padding: 1rem;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
  border-top-width: 1px;
}

.modal-close {
  margin-right: 1rem;
}

.modal-close-button {
  display: inline-flex;
  padding: 0.375rem;
  margin-left: auto;
  background-color: transparent;
  font-size: 0.875rem;
  line-height: 1.25rem;
  align-items: center;
  border-radius: 0.5rem;
}

.modal-close-icon {
  width: 1.25rem;
  height: 1.25rem;
}

